legacy/kubernetes/eks/kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
