legacy/kubernetes/eks/kubia-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-v2
  labels:
      creation_method: manual
      env: prod
spec:
  containers:
  - image: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
