legacy/kubernetes/eks/mongodb-pod-gcepd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  volumes:
  - name: mongodb-data           
    gcePersistentDisk:           
      pdName: mongodb            
      fsType: ext4               
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - name: mongodb-data         
      mountPath: /data/db        
    ports:
    - containerPort: 27017
      protocol: TCP
